kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llmlingua-demo-nodeport
  namespace: cornelius-ns
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
      protocol: TCP
  selector:
    app: llmlingua-demo
